[package]
name = "buzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
futures = "0.3.28"
rust-embed = "8.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["set-header"] }
ulid = { version = "1.1.0", features = ["serde"] }