[package]
name = "buzzer"
version = "0.1.3"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
env_logger = { git = "https://github.com/tmccombs/env_logger", rev = "a47d1d99", features=["kv_unstable"] }
futures = "0.3.28"
log = { version = "0.4.20", features = ["kv_unstable"] }
log-panics = "2.1.0"
rust-embed = "8.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.4.4", features = ["set-header"] }
ulid = { version = "1.1.0", features = ["serde"] }